# semblance

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  publishing.md  roadmap.md  semblance_planning_and_roadmap.md
docs/api/: index.md
docs/examples/: README.md  advanced.md  basic.md  error_simulation.md  nested.md  pagination.md  plugins.md  put_patch_delete.md  request_links.md  stateful.md  stateful_crud.md
docs/guides/: README.md  advanced-links.md  cli.md  concepts.md  cookbook.md  getting-started.md  input-output-binding.md  pagination.md  plugins.md  request-links.md  simulation-options.md  stateful-mode.md  testing.md  troubleshooting.md
docs/guides/examples/: run_examples.py
examples/: README.md
examples/advanced/: README.md  app.py
examples/basic/: README.md  app.py
examples/error_simulation/: README.md  app.py
examples/nested/: README.md  app.py
examples/pagination/: README.md  app.py
examples/plugins/: README.md  app.py
examples/put_patch_delete/: README.md  app.py
examples/request_links/: README.md  app.py
examples/stateful/: README.md  app.py
examples/stateful_crud/: README.md  app.py
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/examples/: index.html
site/examples/advanced/: index.html
site/examples/basic/: index.html
site/examples/error_simulation/: index.html
site/examples/nested/: index.html
site/examples/pagination/: index.html
site/examples/plugins/: index.html
site/examples/stateful/: index.html
site/guides/: index.html
site/guides/advanced-links/: index.html
site/guides/cli/: index.html
site/guides/examples/: run_examples.py
site/guides/getting-started/: index.html
site/guides/input-output-binding/: index.html
site/guides/pagination/: index.html
site/guides/plugins/: index.html
site/guides/simulation-options/: index.html
site/guides/stateful-mode/: index.html
site/guides/testing/: index.html
site/publishing/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/semblance_planning_and_roadmap/: index.html
src/semblance/: __init__.py  api.py  cli.py  config.py  export.py  factory.py  links.py  pagination.py  plugins.py  property_testing.py  pytest_plugin.py  rate_limit.py  resolver.py  state.py  testing.py  validation.py
tests/: cli_test_module.py  conftest.py  example_models.py  sample_app.py  test_api.py  test_doc_examples.py  test_edge_cases.py  test_export.py  test_factory.py  test_links.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_plugins.py  test_property_testing.py  test_rate_limit.py  test_resolver.py  test_smoke.py  test_state.py  test_validation.py
