[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semblance"
version = "0.1.0"
description = "Schema-driven REST API simulation with FastAPI, Pydantic, and Polyfactory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = []
keywords = ["fastapi", "pydantic", "polyfactory", "api", "mock", "simulation", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "polyfactory>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
semblance = "semblance.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Documentation = "https://github.com/yourusername/semblance#readme"
Repository = "https://github.com/yourusername/semblance"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
