[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semblance"
version = "0.4.0"
description = "Schema-driven REST API simulation with FastAPI, Pydantic, and Polyfactory"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Semblance Contributors"}]
keywords = ["fastapi", "pydantic", "polyfactory", "api", "mock", "simulation", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "polyfactory>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
semblance = "semblance.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "hypothesis>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.0.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-include-markdown-plugin>=3.0.0",
]

[project.urls]
Documentation = "https://semblance.readthedocs.io/"
Repository = "https://github.com/eddiethedean/semblance"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (e.g. time.sleep); use -m 'not slow' for fast runs",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
exclude = ["docs", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["semblance.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["polyfactory.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["semblance.api"]
disable_error_code = ["valid-type"]

[[tool.mypy.overrides]]
module = ["semblance.rate_limit", "semblance.state", "semblance.pagination"]
strict_optional = true

[[tool.mypy.overrides]]
module = ["semblance.export", "semblance.plugins"]
strict_optional = true

[[tool.mypy.overrides]]
module = ["semblance.api", "semblance.factory"]
strict_optional = true

[[tool.mypy.overrides]]
module = ["semblance.property_testing"]
strict_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
